--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-tempo",
+  "name": "ecotrace",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -16,12 +16,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "autoprefixer": "^10.4.20",
     "expo": "^54.0.25",
     "expo-atlas": "^0.4.0",
     "expo-blur": "~15.0.7",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -33,10 +34,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
-    "lightningcss": "^1.29.2",
     "lucide-react-native": "^0.479.0",
-    "nativewind": "^4.1.23",
-    "postcss": "^8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -47,8 +45,7 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.17"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
