--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "train-model": "node scripts/trainModel.js",
+    "fetch-training-data": "node scripts/fetchTrainingData.js"
   },
   "jest": {
     "preset": "jest-expo"
@@ -19,6 +21,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@tensorflow/tfjs": "^4.22.0",
     "expo": "^54.0.25",
     "expo-atlas": "^0.4.0",
     "expo-blur": "~15.0.7",
